added weight the section

--- a/index.html
+++ b/index.html
@@ -16,4 +16,13 @@
    <div class="istinput">
       <p><label>Height in cm: </label><input type="text" placeholder="Enter your Height....." id ="Height"></p>
    </div>
-    
+    <div class="ndiput">
+      <p><label>Weight in kg: </label><input type="text" placeholder="Enter your weight....." id ="weight"></p>
+   </div>
+   <button>Calculate</button>
+   </div>
+
+    </form>
+   <script src="bmi.js"></script>
+ </body>
+ </html>
